src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Also_Sells__c</fullName>
        <label>Also Sells</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <label>DisplayName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_presence__c</fullName>
        <label>Market presence</label>
        <picklist>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebay</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Online_Experience__c</fullName>
        <label>Online Experience</label>
        <picklist>
            <picklistValues>
                <fullName>Never Before</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1 year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seller_Id__c</fullName>
        <externalId>true</externalId>
        <label>Seller Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Super_Category__c</fullName>
        <label>Super Category</label>
        <picklist>
            <picklistValues>
                <fullName>BGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Softlines</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Turn_over_per_month__c</fullName>
        <label>Turn over per month (Lakhs)</label>
        <picklist>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_ID__c</fullName>
        <label>VAT ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Super_Category__c</columns>
        <columns>Seller_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Super_Category__c</field>
            <operation>equals</operation>
            <value>Softlnies,Softlines</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
</CustomObject>